# GreedySnake

./: CMakeLists.txt
src/code/: controller.cpp  food.cpp  main.cpp  map.cpp  point.cpp  snake.cpp  startinterface.cpp  tools.cpp
